Fix calendar event clipping by removing forced timed-event widths

--- a/src/style.css
+++ b/src/style.css
@@ -1024,12 +1024,6 @@ body {
 .v-calendar-daily__intervals-body{
   background: ghostwhite;
 }
-.v-event-timed{
-  width: 20%;
-}
-.cc-calendar-event{
-  width: 25%;
-}
 .cc-calendar-event {
   display: flex;
   flex-direction: column;
